--- a/index.html
+++ b/index.html
@@ -31,11 +31,8 @@
       <img src="hero.jpg" alt="Medical research hero image" />
     </figure>
     <div class="container hero-content">
-      <h1 class="headline" data-en="MedScribe Journal" data-ar="مجلة ميدسكرايب">MedScribe Journal</h1>
-      <p class="dek" data-en="Where words save lives — exploring the power of documentation in healthcare."
-         data-ar="حيث تنقذ الكلمات الأرواح — استكشاف قوة التوثيق في الرعاية الصحية.">
-         Where words save lives — exploring the power of documentation in healthcare.
-      </p>
+      <h1 class="headline">MedScribe Journal</h1>
+      <p class="dek">Where words save lives — exploring the power of documentation in healthcare.</p>
       <div class="meta">
         <span>By MedScribe Editorial</span>
         <span>January 2026</span>
@@ -43,7 +40,7 @@
     </div>
   </section>
 
-  <!-- Article-like Services -->
+  <!-- Article -->
   <article class="article container">
     <p class="lead">We provide rigorous medical and dental research support, thesis writing, and professional presentations.</p>
 
