--- a/index.html
+++ b/index.html
@@ -15,22 +15,28 @@
 
   <!-- Header -->
   <header class="site-header">
-    <nav>
-      <ul>
-        <li><a href="#home" data-en="Home" data-ar="الرئيسية">Home</a></li>
-        <li><a href="#services" data-en="Services" data-ar="الخدمات">Services</a></li>
-        <li><a href="#about" data-en="About Us" data-ar="من نحن">About Us</a></li>
-        <li><a href="#contact" data-en="Contact Us" data-ar="اتصل بنا">Contact Us</a></li>
-      </ul>
-    </nav>
+    <div class="container header-inner">
+      <a href="#">
+        <img src="medscribe-logo.png" alt="Med-Scribe logo" class="logo" />
+      </a>
+      <nav>
+        <ul>
+          <li><a href="#home">Home</a></li>
+          <li><a href="#services">Services</a></li>
+          <li><a href="#about">About Us</a></li>
+          <li><a href="#contact">Contact Us</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
 
   <!-- Hero -->
-  <section class="hero">
+  <section class="hero" id="home">
     <figure class="hero-media">
       <img src="hero.jpg" alt="Medical research hero image" />
     </figure>
     <div class="container hero-content">
+      <img src="medscribe-logo.png" alt="Med-Scribe logo" class="hero-logo" />
       <h1 class="headline">MedScribe Journal</h1>
       <p class="dek">Where words save lives — exploring the power of documentation in healthcare.</p>
       <div class="meta">
@@ -41,7 +47,7 @@
   </section>
 
   <!-- Article -->
-  <article class="article container">
+  <article class="article container" id="services">
     <p class="lead">We provide rigorous medical and dental research support, thesis writing, and professional presentations.</p>
 
     <figure class="inline-figure">
@@ -50,7 +56,7 @@
     </figure>
 
     <h2 class="section-title">Our Services</h2>
-    <p>From thesis protocols to assignments and presentations, MedScribe ensures academic excellence and clarity.</p>
+    <p>From thesis protocols to assignments and presentations, MedScribe ensures academic excellence and clarity. We tailor every document to meet scientific standards and patient-centered goals.</p>
 
     <blockquote class="pull-quote">
       <p>“Documentation isn’t paperwork — it’s patient care.”</p>
@@ -65,7 +71,7 @@
   <!-- About -->
   <section id="about" class="container">
     <h2>About Us</h2>
-    <p>We are a dedicated team of medical & dental professionals, committed to providing comprehensive research and academic support.</p>
+    <p>We are a dedicated team of medical & dental professionals, committed to providing comprehensive research and academic support. Our work spans thesis development, ethical analysis, and clinical documentation — all crafted with precision and care.</p>
   </section>
 
   <!-- Contact -->
